[workspace]
resolver = "3"
members = [
    "headhunter-bindings",
    "headhunter-cli",
]

[workspace.package]
version = "0.1.1"
authors = ["StackOverflowExcept1on"]
edition = "2024"
repository = "https://github.com/StackOverflowExcept1on/bump-my-resume"
license = "MIT"
keywords = ["headhunter", "hh", "hh-ru"]

[workspace.dependencies]
argh = "0.1.13"
color-eyre = "0.6.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thirtyfour = "0.36"
thiserror = "2.0"
time = { version = "0.3", features = ["local-offset", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
url = "2.5.7"

headhunter-bindings = { version = "0.1.1", path = "headhunter-bindings" }
