[package]
name = "headhunter-bindings"
version = "0.1.0"
authors = ["StackOverflowExcept1on"]
edition = "2021"
description = "Rust bindings to the Headhunter API (https://hh.ru)"
repository = "https://github.com/StackOverflowExcept1on/bump-my-resume"
license = "MIT"
keywords = ["headhunter", "hh", "hh-ru"]
categories = ["api-bindings"]

[dependencies]
thiserror = "1.0"
thirtyfour = "0.32.0-rc.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
url = "2.3.1"
