[package]
name = "headhunter-bindings"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust bindings to the Headhunter API (https://hh.ru)"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings"]

[dependencies]
thiserror.workspace = true
thirtyfour.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
url.workspace = true
