[package]
name = "headhunter-cli"
version = "0.1.0"
authors = ["StackOverflowExcept1on"]
edition = "2021"
description = " Tool for Headhunter (https://hh.ru) that can automatically update resumes"
repository = "https://github.com/StackOverflowExcept1on/bump-my-resume"
license = "MIT"
keywords = ["headhunter", "hh", "hh.ru"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.9"
color-eyre = "0.6.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
time = { version = "0.3", features = ["local-offset"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
headhunter-bindings = { path = "../headhunter-bindings" }
