[package]
name = "headhunter-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Tool for Headhunter (https://hh.ru) that can automatically update resumes"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]

[dependencies]
argh.workspace = true
color-eyre.workspace = true
headhunter-bindings.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
